# avio-editor-demo

./: .gitignore  Cargo.toml  justfile
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
docs/: issue36.md  specification.md
src/: analysis.rs  export.rs  gif.rs  main.rs  player.rs  presets.rs  proxy.rs  sprite.rs  state.rs  thumbnail.rs  trim.rs
src/ui/: clip_browser.rs  drain.rs  mod.rs  monitor.rs  theme.rs  timeline.rs
