[package]
name = "avio-editor-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
avio = { version = "0.13.0", features = [
    "decode",
    "encode",
    "filter",
    "pipeline",
    "preview",
    "preview-proxy",
    "tokio",
    "serde",
] }

eframe     = "0.33"
egui       = "0.33"
rfd        = "0.17.2"
tokio      = { version = "1.51.1", features = ["full"] }
log        = "0.4.29"
env_logger = "0.11.10"
image     = { version = "0.25.10", default-features = false, features = ["png"] }
